[package]
name = "odserver"
version = "0.2.0"
authors = ["Evgeniy Polyakov <zbr@ioremap.net>"]
edition = "2021"

[dependencies]
clap = "2"
futures-util = { version = "0.3", default-features = false }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
image = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tensorflow = "*"
